feat: migrer til OpenSearch 3 med opensearch-java-klienten (#50)
* feat: migrer til OpenSearch 3 med opensearch-java-klienten

- opensearch 2.19.5 -> 3.1.0, high level rest client -> opensearch-java
  (OpenSearchClient) med low level RestClient for _cat-kall
- AppConfig setter opp RestClient med basic auth via httpclient5 og
  OpenSearchClient med JacksonJsonpMapper; UnsafeSSLContextUtil fjernet
- ElasticsearchIndexClient bygger på OpenSearchClient i stedet for å arve
  RestHighLevelClient; indeksnavn lowercases med Locale.ROOT
- IndexService bruker BulkResponseItem og Strings.CS
- compose.yml for lokal OpenSearch + dashboards, application-dev.yml
- naiserator.yml: observability instance -> enhetsregisteret

* chore: oppgrader compose.yml til OpenSearch 3

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>

* Fix batch test deprecations and varargs warning

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>

* Disable HTTP content decompression for OpenSearch client

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>

* fix: la OpenSearch RestClient håndtere gzip i stedet for HttpClient 5

Bulk-kall mot OpenSearch 3 feilet med «ZipException: Not in GZIP format».
Årsaken er dobbelt dekomprimering i opensearch-rest-client 3.1.0:
HttpClient 5 pakker ut responsen, men lar Content-Encoding-headeren stå,
og HeapBufferedAsyncResponseConsumer bygger entiteten med den headeren.
RestClient.convertResponse ser da «gzip» og pakker ut på nytt.

Kun kall med respons-body ble rammet; ping og indexExists er HEAD.

Å bare slå av komprimering fjernet symptomet, men også gzip på nettet.
Med setCompressionEnabled(true) eier RestClient komprimeringen selv,
og vi får i tillegg gzip-komprimerte request-bodyer ved bulk-indeksering.

Verifisert lokalt mot compose.yml med full synk av underenheter:
856 239 dokumenter indeksert og alias byttet.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>

* refactor: rename Elasti